Added django messages

--- a/MMSquares/Squares/templates/squares/login.html
+++ b/MMSquares/Squares/templates/squares/login.html
@@ -6,16 +6,8 @@
 
     {% load crispy_forms_tags %}
 
-    {% if message %}
-    <div class="col-lg-7 col-md-12 m-auto">
-        <div class="alert alert-danger shadow" role="alert">
-            {{ message }}
-        </div>
-    </div>
-    {% endif %}
-
     <div class="col-md-6 offset-md-3">
-        <h4 class="padding">Register to join the 2021 March Madness Squares Pool!</h4>
+        <h4 class="padding">Login for admin access.</h4>
 
         <form method='POST'>
             {% csrf_token %}
