--- a/MMSquares/Squares/templates/squares/homepage.html
+++ b/MMSquares/Squares/templates/squares/homepage.html
@@ -15,6 +15,10 @@
                 <table class="table table-bordered">
                     <thead>
                         <tr>
+                            <th colspan="1"></th>
+                            <th colspan="10" class="bg-success text-warning">Winning Team</th>
+                        </tr>
+                        <tr>
                             <th></th>
                             {% for number in win_nums %}
                             <th>{{ number }}</th>
