--- a/MMSquares/Squares/static/squares/styles.css
+++ b/MMSquares/Squares/static/squares/styles.css
@@ -1,8 +1,38 @@
 th, td {
     text-align: center;
+    vertical-align: middle;
 }
 
 
-.vertical {
-    transform: rotate(270deg);
+span {
+    writing-mode:vertical-rl;
+    transform: rotate(180deg);
+}
+
+
+table {
+    margin-top: 50px;
+    margin-left: 25px;
+    max-width: 700px;
+}
+
+
+.green {
+    background-color: green !important;
+    color: white !important;
+}
+
+
+.yellow {
+    background-color: yellow !important;
+}
+
+
+table {
+    border: 1px solid black !important;
+}
+
+
+td:hover {
+    background-color: blue;
 }
