--- a/MMSquares/Squares/templates/squares/homepage.html
+++ b/MMSquares/Squares/templates/squares/homepage.html
@@ -32,16 +32,16 @@
                         {% for item in los_num_plus_pool %}
                         <tr>
                             <th class="yellow">{{ item.0 }}</th>
-                            <td>{{ item.1.0 }}</td>
-                            <td>{{ item.1.1 }}</td>
-                            <td>{{ item.1.2 }}</td>
-                            <td>{{ item.1.3 }}</td>
-                            <td>{{ item.1.4 }}</td>
-                            <td>{{ item.1.5 }}</td>
-                            <td>{{ item.1.6 }}</td>
-                            <td>{{ item.1.7 }}</td>
-                            <td>{{ item.1.8 }}</td>
-                            <td>{{ item.1.9 }}</td>
+                            <td class="col1">{{ item.1.0 }}</td>
+                            <td class="col2">{{ item.1.1 }}</td>
+                            <td class="col3">{{ item.1.2 }}</td>
+                            <td class="col4">{{ item.1.3 }}</td>
+                            <td class="col5">{{ item.1.4 }}</td>
+                            <td class="col6">{{ item.1.5 }}</td>
+                            <td class="col7">{{ item.1.6 }}</td>
+                            <td class="col8">{{ item.1.7 }}</td>
+                            <td class="col9">{{ item.1.8 }}</td>
+                            <td class="col10">{{ item.1.9 }}</td>
                         </tr>
                     {% endfor %}
                     </tbody>
