--- a/MMSquares/Squares/templates/squares/homepage.html
+++ b/MMSquares/Squares/templates/squares/homepage.html
@@ -12,7 +12,7 @@
 
         <div class="row">
             <div class="col-5 ">
-                <table class="table table-borderless">
+                <table class="table table-borderless pool-table">
                     <thead>
                         <tr>
                             <th colspan="12" class="text-white bg-dark">Winning Team</th>
