Highlighting row and column now working

--- a/MMSquares/Squares/static/squares/styles.css
+++ b/MMSquares/Squares/static/squares/styles.css
@@ -29,7 +29,7 @@ span {
     border: 1px solid black !important;
 }
 
-
+/* The two below change the background color for the hovered box as well as the entire row */
 td:hover {
     background-color: rgb(187, 189, 186) !important;
 }
