--- a/MMSquares/Squares/templates/squares/layout.html
+++ b/MMSquares/Squares/templates/squares/layout.html
@@ -28,10 +28,10 @@
             </div>
             <div class="navbar-nav mt-2 ms-auto">
                 {% if user.is_authenticated %}
-                    <a class="nav-link">{{ name }} is signed in</a>
+                    <a class="nav-link">Signed in as admin</a>
                     <a class="nav-link active" href="{% url 'logout_user' %}">Logout</a>
                 {% else %}
-                    <a class="nav-link active" href="{% url 'login_user' %}">Admin Sign In</a>
+                    <a class="nav-link active" href="{% url 'login_user' %}">Sign in as admin</a>
                 {% endif %}
             </div>
           </div>
