Added tabs up top

--- a/MMSquares/Squares/static/squares/styles.css
+++ b/MMSquares/Squares/static/squares/styles.css
@@ -37,3 +37,12 @@ span {
     width: 20px;
 }
 
+.pad-left {
+    padding-top: 3%;
+    padding-left: 3%;
+}
+
+.pad-right {
+    padding-top: 3%;
+    padding-right: 3%;
+}
