--- a/MMSquares/Squares/templates/squares/homepage.html
+++ b/MMSquares/Squares/templates/squares/homepage.html
@@ -9,84 +9,81 @@
         {{ message }}
     {% endif %}
 
-    <div class="container">
         <div class="row">
-          <div class="col-sm">
-            <table class="table table-borderless pool-table">
-                <thead>
-                    <tr>
-                        <th colspan="12" class="text-white bg-dark">Winning Team</th>
-                    </tr>
-                    <tr>
-                        <th class="bg-dark"></th>
-                        <th class="green"></th>
-                        {% for number in win_nums %}
-                        <th class="green">{{ number }}</th>
+            <div class="col-sm pad-left">
+                <table class="table table-borderless pool-table">
+                    <thead>
+                        <tr>
+                            <th colspan="12" class="text-white bg-dark">Winning Team</th>
+                        </tr>
+                        <tr>
+                            <th class="bg-dark"></th>
+                            <th class="green"></th>
+                            {% for number in win_nums %}
+                            <th class="green">{{ number }}</th>
+                            {% endfor %}
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th rowspan="11" class="text-white bg-dark"><span>Losing Team</span></th>
+                        </tr>
+                        {% for item in los_num_plus_pool %}
+                        <tr>
+                            <th class="yellow">{{ item.0 }}</th>
+                            <td class="col1">{{ item.1.0 }}</td>
+                            <td class="col2">{{ item.1.1 }}</td>
+                            <td class="col3">{{ item.1.2 }}</td>
+                            <td class="col4">{{ item.1.3 }}</td>
+                            <td class="col5">{{ item.1.4 }}</td>
+                            <td class="col6">{{ item.1.5 }}</td>
+                            <td class="col7">{{ item.1.6 }}</td>
+                            <td class="col8">{{ item.1.7 }}</td>
+                            <td class="col9">{{ item.1.8 }}</td>
+                            <td class="col10">{{ item.1.9 }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-sm pad-right">
+                {% if request.user.is_authenticated %}
+                    <h5>Click to create new random numbers for the winning and losing team.</h5>
+                    <div>
+                        <form method="POST">
+                            {% csrf_token %}
+                            <input type="submit" value="New Numbers" name="new_numbers">
+                        </form>
+                    </div>        
+                {% endif %}
+
+                <table class="table table-striped scores-table">
+                    <thead>
+                        <tr>
+                            <th scope="col"></th>
+                            <th scope="col">First Round</th>
+                            <th scope="col">Second Round</th>
+                            <th scope="col">Sweet 16</th>
+                            <th scope="col">Elite Eight</th>
+                            <th scope="col">Final Four</th>
+                            <th scope="col">Championship</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for player in player_scores %}
+                            <tr>
+                                <th scope="row">{{ player.0 }}</th>
+                                <td>{{ player.1 }}</td>
+                                <td>{{ player.2 }}</td>
+                                <td>{{ player.3 }}</td>
+                                <td>{{ player.4 }}</td>
+                                <td>{{ player.5 }}</td>
+                                <td>{{ player.6 }}</td>
+                            </tr>
                         {% endfor %}
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th rowspan="11" class="text-white bg-dark"><span>Losing Team</span></th>
-                    </tr>
-                    {% for item in los_num_plus_pool %}
-                    <tr>
-                        <th class="yellow">{{ item.0 }}</th>
-                        <td class="col1">{{ item.1.0 }}</td>
-                        <td class="col2">{{ item.1.1 }}</td>
-                        <td class="col3">{{ item.1.2 }}</td>
-                        <td class="col4">{{ item.1.3 }}</td>
-                        <td class="col5">{{ item.1.4 }}</td>
-                        <td class="col6">{{ item.1.5 }}</td>
-                        <td class="col7">{{ item.1.6 }}</td>
-                        <td class="col8">{{ item.1.7 }}</td>
-                        <td class="col9">{{ item.1.8 }}</td>
-                        <td class="col10">{{ item.1.9 }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-          </div>
-          <div class="col-sm">
-            {% if request.user.is_authenticated %}
-            <h5>Click to create new random numbers for the winning and losing team.</h5>
-            <div>
-                <form method="POST">
-                    {% csrf_token %}
-                    <input type="submit" value="New Numbers" name="new_numbers">
-                </form>
-            </div>        
-        {% endif %}
-
-        <table class="table table-striped scores-table">
-            <thead>
-                <tr>
-                    <th scope="col"></th>
-                    <th scope="col">First Round</th>
-                    <th scope="col">Second Round</th>
-                    <th scope="col">Sweet 16</th>
-                    <th scope="col">Elite Eight</th>
-                    <th scope="col">Final Four</th>
-                    <th scope="col">Championship</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for player in player_scores %}
-                    <tr>
-                        <th scope="row">{{ player.0 }}</th>
-                        <td>{{ player.1 }}</td>
-                        <td>{{ player.2 }}</td>
-                        <td>{{ player.3 }}</td>
-                        <td>{{ player.4 }}</td>
-                        <td>{{ player.5 }}</td>
-                        <td>{{ player.6 }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-
-          </div>
+                    </tbody>
+                </table>
+            </div>
         </div>
-      </div>
 
 {% endblock %}
