--- a/MMSquares/Squares/templates/squares/layout.html
+++ b/MMSquares/Squares/templates/squares/layout.html
@@ -19,12 +19,16 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand mx-auto" href=""><span class="black" style="padding-left: 10px;"></span>March Madness 2021 Squares Pool</span></a>
+          <a class="navbar-brand mx-auto" href="{% url 'homepage' %}"><span class="black" style="padding-left: 10px;"></span>March Madness 2021 Squares Pool</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav mt-2">
+            <div class="navbar-nav">
+              <a class="nav-link" href="{% url 'directions' %}" style="padding-left: 40px;">How to play</a>
+              {% if user.is_authenticated %}
+                <a class="nav-link" href="#">Admin settings</a>
+              {% endif %}
             </div>
             <div class="navbar-nav mt-2 ms-auto">
                 {% if user.is_authenticated %}
