--- a/MMSquares/Squares/templates/squares/homepage.html
+++ b/MMSquares/Squares/templates/squares/homepage.html
@@ -98,9 +98,72 @@
                 </div>
               </nav>
               <div class="tab-content" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="nav-R1" role="tabpanel" aria-labelledby="nav-R1-tab">First Round</div>
-                <div class="tab-pane fade" id="nav-R2" role="tabpanel" aria-labelledby="nav-R2-tab">Second Round</div>
-                <div class="tab-pane fade" id="nav-R3" role="tabpanel" aria-labelledby="nav-R3-tab">Sweet 16</div>
+                <div class="tab-pane fade show active" id="nav-R1" role="tabpanel" aria-labelledby="nav-R1-tab">
+                    <table class="table table-striped scores-table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Players</th>
+                                <th scope="col"># of Game Won</th>
+                                <th scope="col">Round Amount Won</th>
+                                <th scope="col">Tournament Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for player in player_scores %}
+                                <tr>
+                                    <th scope="row">{{ player.0 }}</th>
+                                    <td id="R1-games-won-{{ forloop.counter }}">{{ player.1 }}</td>
+                                    <td id="R1-amount-won-{{ forloop.counter }}"></td>
+                                    <td class="total"></td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>    
+                </div>
+                <div class="tab-pane fade" id="nav-R2" role="tabpanel" aria-labelledby="nav-R2-tab">
+                    <table class="table table-striped scores-table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Players</th>
+                                <th scope="col"># of Game Won</th>
+                                <th scope="col">Round Amount Won</th>
+                                <th scope="col">Tournament Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for player in player_scores %}
+                                <tr>
+                                    <th scope="row">{{ player.0 }}</th>
+                                    <td id="R2-games-won">{{ player.2 }}</td>
+                                    <td id="R2-amount-won"></td>
+                                    <td class="total"></td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>    
+                </div>
+                <div class="tab-pane fade" id="nav-R3" role="tabpanel" aria-labelledby="nav-R3-tab">
+                    <table class="table table-striped scores-table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Players</th>
+                                <th scope="col"># of Game Won</th>
+                                <th scope="col">Round Amount Won</th>
+                                <th scope="col">Tournament Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for player in player_scores %}
+                                <tr>
+                                    <th scope="row">{{ player.0 }}</th>
+                                    <td id="R3-games-won">{{ player.3 }}</td>
+                                    <td id="R3-amount-won"></td>
+                                    <td class="total"></td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>    
+                </div>
                 <div class="tab-pane fade" id="nav-R4" role="tabpanel" aria-labelledby="nav-R4-tab">Elite Eight</div>
                 <div class="tab-pane fade" id="nav-R5" role="tabpanel" aria-labelledby="nav-R5-tab">Final Four</div>
                 <div class="tab-pane fade" id="nav-R6" role="tabpanel" aria-labelledby="nav-R6-tab">Championship</div>
