--- a/MMSquares/Squares/templates/squares/homepage.html
+++ b/MMSquares/Squares/templates/squares/homepage.html
@@ -134,8 +134,8 @@
                             {% for player in player_scores %}
                                 <tr>
                                     <th scope="row">{{ player.0 }}</th>
-                                    <td id="R2-games-won">{{ player.2 }}</td>
-                                    <td id="R2-amount-won"></td>
+                                    <td id="R2-games-won-{{ forloop.counter }}">{{ player.2 }}</td>
+                                    <td id="R2-amount-won-{{ forloop.counter }}"></td>
                                     <td class="total"></td>
                                 </tr>
                             {% endfor %}
@@ -156,17 +156,80 @@
                             {% for player in player_scores %}
                                 <tr>
                                     <th scope="row">{{ player.0 }}</th>
-                                    <td id="R3-games-won">{{ player.3 }}</td>
-                                    <td id="R3-amount-won"></td>
+                                    <td id="R3-games-won-{{ forloop.counter }}">{{ player.3 }}</td>
+                                    <td id="R3-amount-won-{{ forloop.counter }}"></td>
                                     <td class="total"></td>
                                 </tr>
                             {% endfor %}
                         </tbody>
                     </table>    
                 </div>
-                <div class="tab-pane fade" id="nav-R4" role="tabpanel" aria-labelledby="nav-R4-tab">Elite Eight</div>
-                <div class="tab-pane fade" id="nav-R5" role="tabpanel" aria-labelledby="nav-R5-tab">Final Four</div>
-                <div class="tab-pane fade" id="nav-R6" role="tabpanel" aria-labelledby="nav-R6-tab">Championship</div>
+                <div class="tab-pane fade" id="nav-R4" role="tabpanel" aria-labelledby="nav-R4-tab">
+                    <table class="table table-striped scores-table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Players</th>
+                                <th scope="col"># of Game Won</th>
+                                <th scope="col">Round Amount Won</th>
+                                <th scope="col">Tournament Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for player in player_scores %}
+                                <tr>
+                                    <th scope="row">{{ player.0 }}</th>
+                                    <td id="R4-games-won-{{ forloop.counter }}">{{ player.4 }}</td>
+                                    <td id="R4-amount-won-{{ forloop.counter }}"></td>
+                                    <td class="total"></td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>    
+                </div>
+                <div class="tab-pane fade" id="nav-R5" role="tabpanel" aria-labelledby="nav-R5-tab">
+                    <table class="table table-striped scores-table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Players</th>
+                                <th scope="col"># of Game Won</th>
+                                <th scope="col">Round Amount Won</th>
+                                <th scope="col">Tournament Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for player in player_scores %}
+                                <tr>
+                                    <th scope="row">{{ player.0 }}</th>
+                                    <td id="R5-games-won-{{ forloop.counter }}">{{ player.5 }}</td>
+                                    <td id="R5-amount-won-{{ forloop.counter }}"></td>
+                                    <td class="total"></td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>    
+                </div>
+                <div class="tab-pane fade" id="nav-R6" role="tabpanel" aria-labelledby="nav-R6-tab">
+                    <table class="table table-striped scores-table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Players</th>
+                                <th scope="col"># of Game Won</th>
+                                <th scope="col">Round Amount Won</th>
+                                <th scope="col">Tournament Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for player in player_scores %}
+                                <tr>
+                                    <th scope="row">{{ player.0 }}</th>
+                                    <td id="R6-games-won-{{ forloop.counter }}">{{ player.6 }}</td>
+                                    <td id="R6-amount-won-{{ forloop.counter }}"></td>
+                                    <td class="total"></td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>    
+                </div>
               </div>
         </div>
 
