Javascript working for scoreboard

--- a/MMSquares/Squares/templates/squares/homepage.html
+++ b/MMSquares/Squares/templates/squares/homepage.html
@@ -85,7 +85,7 @@
                                             <th scope="row">{{ player.0 }}</th>
                                             <td id="R1-games-won-{{ forloop.counter }}">{{ player.1 }}</td>
                                             <td id="R1-amount-won-{{ forloop.counter }}"></td>
-                                            <td class="total"></td>
+                                            <td class="total-{{ forloop.counter }}"></td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
@@ -107,7 +107,7 @@
                                             <th scope="row">{{ player.0 }}</th>
                                             <td id="R2-games-won-{{ forloop.counter }}">{{ player.2 }}</td>
                                             <td id="R2-amount-won-{{ forloop.counter }}"></td>
-                                            <td class="total"></td>
+                                            <td class="total-{{ forloop.counter }}"></td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
@@ -129,7 +129,7 @@
                                             <th scope="row">{{ player.0 }}</th>
                                             <td id="R3-games-won-{{ forloop.counter }}">{{ player.3 }}</td>
                                             <td id="R3-amount-won-{{ forloop.counter }}"></td>
-                                            <td class="total"></td>
+                                            <td class="total-{{ forloop.counter }}"></td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
@@ -151,7 +151,7 @@
                                             <th scope="row">{{ player.0 }}</th>
                                             <td id="R4-games-won-{{ forloop.counter }}">{{ player.4 }}</td>
                                             <td id="R4-amount-won-{{ forloop.counter }}"></td>
-                                            <td class="total"></td>
+                                            <td class="total-{{ forloop.counter }}"></td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
@@ -173,7 +173,7 @@
                                             <th scope="row">{{ player.0 }}</th>
                                             <td id="R5-games-won-{{ forloop.counter }}">{{ player.5 }}</td>
                                             <td id="R5-amount-won-{{ forloop.counter }}"></td>
-                                            <td class="total"></td>
+                                            <td class="total-{{ forloop.counter }}"></td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
@@ -195,7 +195,7 @@
                                             <th scope="row">{{ player.0 }}</th>
                                             <td id="R6-games-won-{{ forloop.counter }}">{{ player.6 }}</td>
                                             <td id="R6-amount-won-{{ forloop.counter }}"></td>
-                                            <td class="total"></td>
+                                            <td class="total-{{ forloop.counter }}"></td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
