--- a/MMSquares/Squares/templates/squares/directions.html
+++ b/MMSquares/Squares/templates/squares/directions.html
@@ -4,6 +4,28 @@
 
 {% block body %}
 
+    <div class="container directions">
+        <h4>How To Play</h4>
+        <p>
+            Click <a href="https://docs.google.com/spreadsheets/d/1RalxR6R1K2gvQElQAUdvIuiRVYUqXciLOGwR-Cy3qMQ/edit?usp=sharing" target="_blank">here</a>
+            to begin selecting squares. Input your initials into any blank square. The number of squares you should select
+            depends on how many you want to buy in for. Speak with the manager of the game for details.
+        </p>
+        <p>
+            Once you have picked your squares your job is done. Sit back and enjoy watching the greatest sporting event of the year.
+            Right before the tournament starts, numbers 0-9 will be randomly generated and placed horiztonally and vertically on the grid. Winning boxes are determined by looking at the final score of each game. 
+            The top row of numbers (horizontal) represents the winning team while the side numbers (vertical) represents the losing team.
+        </p>
+        <p>
+            For example, if Oregon beats Duke 75-69, Oregon is the winning team and the last digit of their score (75) is 5. We would look for the 5 across the top of the grid. 
+            Duke's score was 69, so we look for the 9 down the left side of the grid. The person with the square associated with '5' and '9' is the winner of that game.
+        </p>
+        <p>
+            Each round is worth more than the previous round. The manager of your pool can decide the exact amounts. Your scores will be automatically updated.
+            You can view everyone's round by round score and total score in the scores table.
+        </p>
+    </div>
+
 
 
 {% endblock %}
