Added Quick Settings tab

--- a/MMSquares/Squares/templates/squares/layout.html
+++ b/MMSquares/Squares/templates/squares/layout.html
@@ -28,7 +28,8 @@
               <a class="nav-link" href="{% url 'directions' %}" style="padding-left: 40px;">How to play</a>
               {% if user.is_authenticated %}
                 <a class="nav-link" href="{% url 'upload' %}">Upload new spreadsheet</a>
-                <a class="nav-link" href="{% url 'admin:index' %}">Admin settings</a>
+                <a class="nav-link" href="{% url 'quick_settings' %}">Quick settings</a>
+                <a class="nav-link" href="{% url 'admin:index' %}">Full admin settings</a>
               {% endif %}
             </div>
             <div class="navbar-nav mt-2 ms-auto">
