--- a/MMSquares/Squares/templates/squares/homepage.html
+++ b/MMSquares/Squares/templates/squares/homepage.html
@@ -46,17 +46,37 @@
                     </tbody>
                 </table>
             </div>
+
             <div class="col-sm pad-right">
                 {% if request.user.is_authenticated %}
-                    <h5>Click to create new random numbers for the winning and losing team.</h5>
-                    <div>
-                        <form method="POST">
+                    <div class="container">
+                        <form action="POST">
                             {% csrf_token %}
-                            <input type="submit" value="New Numbers" name="new_numbers">
-                        </form>
-                    </div>        
+                            <div class="row">
+                                <div class="col-md pad-left">
+                                    <b>Select Round</b>
+                                    <select class="form-select" name="round">
+                                        <option value="R1">First Round</option>
+                                        <option value="R2">Second Round</option>
+                                        <option value="R3">Sweet 16</option>
+                                        <option value="R4">Elite Eight</option>
+                                        <option value="R5">Final Four</option>
+                                        <option value="R6">Championship</option>
+                                    </select>
+                                </div>
+                                <div class="col-md pad-right">
+                                    <b>Select Winner</b>
+                                    <select class="form-select" name="player">
+                                        {% for player in player_scores %}
+                                            <option value="player-{{ forloop.counter }}">{{ player.0 }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                        </form>    
+                    </div>
+                    <br>
                 {% endif %}
-
                 <div class="container">
                     <nav>
                         <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -203,8 +223,6 @@
                         </div>
                     </div>
                 </div>
-        
-
             </div>
         </div>
         
