Added messages alert

--- a/MMSquares/Squares/templates/squares/homepage.html
+++ b/MMSquares/Squares/templates/squares/homepage.html
@@ -7,8 +7,17 @@
 
     {% load crispy_forms_tags %}
 
-    {% if message %}
-        {{ message }}
+    {% if error_message %}
+        {{ error_message }}
+    {% endif %}
+
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-success alert-dismissible fade show w-25 mx-auto" role="alert">
+                <strong>{{ message }}</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        {% endfor %}
     {% endif %}
 
         <div class="row">
