--- a/MMSquares/Squares/templates/squares/directions.html
+++ b/MMSquares/Squares/templates/squares/directions.html
@@ -2,9 +2,11 @@
 
 {% block title %} How to Play {% endblock %}
 
+{% block body_class %} directions {% endblock %}
+
 {% block body %}
 
-    <div class="container directions">
+    <div class="container how-to-play">
         <h4>How To Play</h4>
         <p>
             Click <a href="https://docs.google.com/spreadsheets/d/1RalxR6R1K2gvQElQAUdvIuiRVYUqXciLOGwR-Cy3qMQ/edit?usp=sharing" target="_blank">here</a>
