--- a/MMSquares/Squares/templates/squares/homepage.html
+++ b/MMSquares/Squares/templates/squares/homepage.html
@@ -2,6 +2,7 @@
 
 {% block title %} Home Page {% endblock %}
 
+{% block body_class %} homepage {% endblock %}
 
 {% block body %}
 
@@ -82,12 +83,12 @@
                 <div class="container">
                     <nav>
                         <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                          <button class="nav-link active" id="nav-R1-tab" data-bs-toggle="tab" data-bs-target="#nav-R1" type="button" role="tab" aria-controls="nav-R1" aria-selected="true">First Round</button>
-                          <button class="nav-link" id="nav-R2-tab" data-bs-toggle="tab" data-bs-target="#nav-R2" type="button" role="tab" aria-controls="nav-R2" aria-selected="false">Second Round</button>
-                          <button class="nav-link" id="nav-R3-tab" data-bs-toggle="tab" data-bs-target="#nav-R3" type="button" role="tab" aria-controls="nav-R3" aria-selected="false">Sweet 16</button>
-                          <button class="nav-link" id="nav-R4-tab" data-bs-toggle="tab" data-bs-target="#nav-R4" type="button" role="tab" aria-controls="nav-R4" aria-selected="false">Elite Eight</button>
-                          <button class="nav-link" id="nav-R5-tab" data-bs-toggle="tab" data-bs-target="#nav-R5" type="button" role="tab" aria-controls="nav-R5" aria-selected="false">Final Four</button>
-                          <button class="nav-link" id="nav-R6-tab" data-bs-toggle="tab" data-bs-target="#nav-R6" type="button" role="tab" aria-controls="nav-R6" aria-selected="false">Championship</button>
+                        <button class="nav-link active" id="nav-R1-tab" data-bs-toggle="tab" data-bs-target="#nav-R1" type="button" role="tab" aria-controls="nav-R1" aria-selected="true">First Round</button>
+                        <button class="nav-link" id="nav-R2-tab" data-bs-toggle="tab" data-bs-target="#nav-R2" type="button" role="tab" aria-controls="nav-R2" aria-selected="false">Second Round</button>
+                        <button class="nav-link" id="nav-R3-tab" data-bs-toggle="tab" data-bs-target="#nav-R3" type="button" role="tab" aria-controls="nav-R3" aria-selected="false">Sweet 16</button>
+                        <button class="nav-link" id="nav-R4-tab" data-bs-toggle="tab" data-bs-target="#nav-R4" type="button" role="tab" aria-controls="nav-R4" aria-selected="false">Elite Eight</button>
+                        <button class="nav-link" id="nav-R5-tab" data-bs-toggle="tab" data-bs-target="#nav-R5" type="button" role="tab" aria-controls="nav-R5" aria-selected="false">Final Four</button>
+                        <button class="nav-link" id="nav-R6-tab" data-bs-toggle="tab" data-bs-target="#nav-R6" type="button" role="tab" aria-controls="nav-R6" aria-selected="false">Championship</button>
                         </div>
                     </nav>
                     <div class="tab-content" id="nav-tabContent">
