--- a/MMSquares/Squares/templates/squares/layout.html
+++ b/MMSquares/Squares/templates/squares/layout.html
@@ -15,7 +15,8 @@
 
     <title>{% block title %}{% endblock %}</title>
   </head>
-  <body>
+  
+  <body class="{% block body_class %}{% endblock %}">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
