File upload submit button style change

--- a/MMSquares/Squares/static/squares/styles.css
+++ b/MMSquares/Squares/static/squares/styles.css
@@ -82,3 +82,7 @@ span {
     -webkit-appearance: menulist !important;
     appearance: auto !important;
 }
+
+.submit-file {
+    margin-top: 7px;
+}
