--- a/MMSquares/Squares/templates/squares/upload.html
+++ b/MMSquares/Squares/templates/squares/upload.html
@@ -18,8 +18,8 @@
 
         <form method='POST' enctype='multipart/form-data'>
             {% csrf_token %}
-            {{ form }}
-            <input type="submit" value="Submit">
+            {{ form|crispy }}
+            <input type="submit" value="Submit" class="btn btn-primary submit-file">
         </form>
     </div>
 
