--- a/MMSquares/Squares/templates/squares/upload.html
+++ b/MMSquares/Squares/templates/squares/upload.html
@@ -25,7 +25,7 @@
                     <li>Make sure every square is filled out on the Google Sheets
                     speadsheet at this <a href="https://docs.google.com/spreadsheets/d/1RalxR6R1K2gvQElQAUdvIuiRVYUqXciLOGwR-Cy3qMQ/edit?usp=sharing" target="_blank">link</a>.</li>
                     <li>Download the file to your computer.</li>
-                    <li>Upload via the buttons to the right.</li>
+                    <li>Upload via the buttons to the left.</li>
                 </ol>
             </div>
         </div>
