--- a/MMSquares/Squares/static/squares/styles.css
+++ b/MMSquares/Squares/static/squares/styles.css
@@ -76,7 +76,7 @@ span {
     color: rgb(196, 194, 194);
 }
 
-.upload-file {
+.upload-file, .quick-settings, .message {
     padding-top: 20px;
 }
 
