--- a/MMSquares/Squares/templates/squares/quick_settings.html
+++ b/MMSquares/Squares/templates/squares/quick_settings.html
@@ -5,24 +5,31 @@
 
 {% block body %}
 
-    <div class="container">
-        {% if request.user.is_authenticated %}
-            <form method="POST">
-                {% csrf_token %}
-                <p>Click to create new random numbers for the winning and losing team:
-                    <input class="btn btn-primary" type="submit" value="New Numbers" name="new_numbers">
-                </p>
-            </form>
-            <form method-"POST">
-                {% csrf_token %}
-                Reset entire game.
-                <input class="btn btn-primary" type="submit" value="Reset Games" name="reset_game">    
-            </form>
-        
-        {% else %}
-            You need admin permissions to access these settings.
-        {% endif %}
+    <div class="container upload-file">
+        <h4>Quick Settings</h4>
+        <div class="row" style="padding-top: 20px;">
+            <div class="col-2">
+                <div>
+                    {% if request.user.is_authenticated %}
+                        <form method="POST">
+                            {% csrf_token %}
+                            <p><input class="btn btn-primary" type="submit" value="New Numbers" name="new_numbers"></p>
+                        </form>
+                        <form method-"POST">
+                            {% csrf_token %}
+                            <p><input class="btn btn-primary" type="submit" value="Reset Games" name="reset_game">    </p>
+                        </form>
+                    
+                    {% else %}
+                        You need admin permissions to access these settings.
+                    {% endif %}
+                </div>
+            </div>
+            <div class="col">
+                <p>Click to create new random numbers for the winning and losing team.</p>
+                <p>Reset entire game.</p>
+            </div>
+        </div>
     </div>
-
 
 {% endblock %}
